--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,22 @@
     <string name="search_error">ERROR WITH SEARCH. TRY AGAIN</string>
     <string name="search">Search</string>
     <string name="about">About</string>
+    <string name="exit">Exit</string>
+    <string name="country">Country</string>
+    <string name="information">Information</string>
+    <string name="ip_address">IP Address:</string>
+    <string name="continent">Continent:</string>
+    <string name="country_title">Country:</string>
+    <string name="postal_code">Postal Code:</string>
+    <string name="currency">Currency:</string>
+    <string name="timezone">Timezone:</string>
+    <string name="region">Region:</string>
+    <string name="city">City:</string>
+    <string name="current_time">Current Time:</string>
+    <string name="lon">LON:</string>
+    <string name="lat">LAT:</string>
+    <string name="language">Language:</string>
+    <string name="offset">Offset:</string>
+    <string name="isp">ISP:</string>
+    <string name="todo">TODO</string>
 </resources>
