Api key hidden from view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="exit">Exit</string>
     <string name="country">Country</string>
     <string name="information">Information</string>
-    <string name="ip_address">IP Address:</string>
+    <string name="ip_address">IP Address</string>
     <string name="continent">Continent:</string>
     <string name="country_title">Country:</string>
     <string name="postal_code">Postal Code:</string>
