searchscreenlayout updated. dependency injection working. change to rxjava to observer data?

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,21 +4,22 @@
     <string name="search">Search</string>
     <string name="about">About</string>
     <string name="exit">Exit</string>
-    <string name="country">Country</string>
+    <string name="country_title">Country</string>
     <string name="information">Information</string>
-    <string name="ip_address">IP Address</string>
-    <string name="continent">Continent:</string>
-    <string name="country_title">Country:</string>
-    <string name="postal_code">Postal Code:</string>
-    <string name="currency">Currency:</string>
-    <string name="timezone">Timezone:</string>
-    <string name="region">Region:</string>
-    <string name="city">City:</string>
-    <string name="current_time">Current Time:</string>
-    <string name="lon">LON:</string>
-    <string name="lat">LAT:</string>
-    <string name="language">Language:</string>
-    <string name="offset">Offset:</string>
-    <string name="isp">ISP:</string>
+    <string name="ip_address">IP Address: %s</string>
+    <string name="continent">Continent: %s</string>
+    <string name="country">Country: %s</string>
+    <string name="postal_code">Postal Code: %s</string>
+    <string name="currency">Currency: %s</string>
+    <string name="timezone">Timezone: %s</string>
+    <string name="region">Region: %s</string>
+    <string name="city">City: %s</string>
+    <string name="current_time">Current Time: %s</string>
+    <string name="lon">LON: %s</string>
+    <string name="lat">LAT: %s</string>
+    <string name="language">Language: %s</string>
+    <string name="offset">Offset: %s</string>
+    <string name="isp">ISP: %s</string>
     <string name="todo">TODO</string>
+    <string name="isp_marker">ISP</string>
 </resources>
