--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <string name="todo">TODO</string>
     <string name="proxy">proxy</string>
     <string name="threat">threat</string>
+    <string name="enter_ip">Enter IP Address</string>
+    <string name="invalid_search">Invalid search</string>
+    <string name="about_ipdata"> Application uses ipdata.com api. ipdata.co is a Fast,
+        Reliable and Clean service that allows you to look up the location of an IP Address and other data.</string>
+<string name="education_use_only"> Application is for educational use only.</string>
 </resources>
